Large device fixed the heading section overlap

--- a/src/container/Laurels/Laurels.css
+++ b/src/container/Laurels/Laurels.css
@@ -103,3 +103,12 @@ h2.main-heading{
     height: 80%;
 }
 }
+@media screen and (min-width : 2000px) {
+    .app__heading-section{
+        position: absolute;
+        top:9%;
+        left:10%;
+        transform: translate(0, -30%);
+        text-align: center;
+    }
+}
